--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,29 @@ dataset/
 build/
 dist/
 
+# Virtual environment
+myenv/
+
+# Python byte-compiled files
+__pycache__/
+*.py[cod]
+
+# Other common Python-related files to ignore
+*.so
+.Python
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
